users index through carousel

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,15 +5,9 @@
                             <a href="#"><span class="element brand">Product Name</span></a>
 
                             <span class="divider"></span>
-
-
-
                             <ul class="menu">
-
                                 <li data-role="dropdown">
-
                                     <a>Teams</a>
-
                                     <ul class="dropdown-menu">
 
                                         <li><a href="#">PL QA</a></li>
@@ -35,7 +29,11 @@
                                 <li><a href="#">Update</a></li>
 
                                 <li><a href="#">My updates</a></li>
+                                <li><%= link_to "About", about_path %></li>
+                                <li><%= link_to "Help", help_path %></li>
 
+                                <li><%= link_to "Home", root_path %></li>
+                                <li><%= link_to "Users", users_path %></li>
                             </ul>
 
                         </div>
