--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,26 @@
 <p>Find me in app/views/static_pages/home.html.erb</p>
 
 
- <div class="tile"></div>
-    <div class="tile double"></div>
-    <div class="tile selected"></div>
-    <div class="tile bg-color-orange"></div>
+
+<div class="carousel" data-role="carousel">
+        <div class="slides">
+            <div class="slide image" id="slide1">
+                <img />
+                <div class="description">
+                    Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>
+                </div>
+            </div>
+ 
+            <div class="slide mixed" id="slide2">
+                <img />
+                <div class="description">
+                    Description text here...Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>Description text here...</br>
+                </div>
+            </div>
+            ...
+        </div>
+ 
+        <span class="control left">‹</span>
+        <span class="control right">›</span>
+ 
+    </div>
