--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,7 +11,7 @@
 
 <%= will_paginate %>
 <%end%>
-<div class="carousel" style="height: 500px;" data-role="carousel" data-param-effect="fade" data-param-direction="left" data-param-period="9999999999999" data-param-markers="on" >
+<div class="carousel" style="height: 500px;" data-role="carousel"  data-param-direction="left" data-param-period="9999999999999" data-param-markers="on" >
                                 <div class="slides">
 <% @users.each do |user| %>
                                     <div class="slide image" >
