Complete has_many :through

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
 <div class="app-bar fg-color-white">
-    <p style="padding: 20px;">Footer content dsfk sdfjdksfoen 2ererworowf fsofdjsflsdjf sfsldfjds f</p>
+    <p style="padding: 20px;">That's how we track it!</p>
 </div>
 
