--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,7 @@
 <div class="nav-bar bg-color-darken">
 
                         <div class="nav-bar-inner">
-
-                            <a href="#"><span class="element brand">Product Name</span></a>
+                            <%= link_to "Tract It!", root_path, class: "element brand" %>
 
                             <span class="divider"></span>
                             <ul class="menu">
@@ -24,7 +23,6 @@
 
                                 </li>
 
-                                <li><a href="#">Weeks</a></li>
 
                                 <li><a href="#">Update</a></li>
 
@@ -34,6 +32,7 @@
 
                                 <li><%= link_to "Home", root_path %></li>
                                 <li><%= link_to "Users", users_path %></li>
+                                <li><%= link_to "Weeks", weeks_path %></li>
                             </ul>
 
                         </div>
