--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,19 +4,12 @@
 <% if @users.empty? %>
  <p> No users found </p>
 <% else %> 
-<%= will_paginate %>
-<ul class="users">
-  <%= render @users  %>
-</ul>
-
-<%= will_paginate %>
-<%end%>
 <div class="carousel" style="height: 500px;" data-role="carousel"  data-param-direction="left" data-param-period="9999999999999" data-param-markers="on" >
                                 <div class="slides">
 <% @users.each do |user| %>
                                     <div class="slide image" >
-    <div class="tile bg-color-orange"></div>
-  <%= user.name  %>
+    <div class="tile bg-color-orange"><%= user.name %></div>
+   <%= link_to user.name, user %>
   <%= user.email  %>
                                     </div>
 
@@ -27,4 +20,6 @@
                                 <span class="control right">&#8250;</span>
                             </div>
                         </div>
+
+<%end%>
 
