--- a/app/views/weeks/edit.html.erb
+++ b/app/views/weeks/edit.html.erb
@@ -1,2 +1,21 @@
-<h1>Weeks#edit</h1>
-<p>Find me in app/views/weeks/edit.html.erb</p>
+<% provide(:title, "Edit week") %> 
+<h1>Update the week </h1>
+ <%= form_for(@week) do |f| %>
+      <%= render 'shared/error_messages', object: f.object %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+
+      <%= f.label :startDate %>
+      <%= f.text_field :startDate %>
+
+      <%= f.label :endDate %>
+      <%= f.text_field :endDate %>
+
+
+      <%= f.label :status %>
+      <%= f.text_field :status %>
+
+      <%= f.submit "Edit week" %>
+    <% end %>
+
+
