--- a/app/views/weeks/index.html.erb
+++ b/app/views/weeks/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Weeks#index</h1>
-<p>Find me in app/views/weeks/index.html.erb</p>
+<% provide(:title, 'All weeks') %>
+<h1>All weeks</h1>
+
+<% if @weeks.empty? %>
+ <p> No weeks found </p>
+<% else %> 
+<div class="carousel" style="height: 500px;" data-role="carousel"  data-param-direction="left" data-param-period="9999999999999" data-param-markers="on" >
+                                <div class="slides">
+<% @weeks.each do |week| %>
+                                    <div class="slide image" >
+    <div class="tile bg-color-orange"></div>
+  <%= link_to week.name, week  %>
+  <%= week.startDate  %>
+  <%= week.endDate  %>
+                                    </div>
+
+<%end%>
+
+                                </div>
+                                <span class="control left">&#8249;</span>
+                                <span class="control right">&#8250;</span>
+                            </div>
+                        </div>
+
+<%end%>
