--- a/app/views/weeks/new.html.erb
+++ b/app/views/weeks/new.html.erb
@@ -1,2 +1,20 @@
-<h1>Weeks#new</h1>
-<p>Find me in app/views/weeks/new.html.erb</p>
+<% provide(:title, 'New week') %>
+<h1>New Week</h1>
+    <%= form_for(@week) do |f| %>
+      <%= render 'shared/error_messages', object: f.object %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
+
+      <%= f.label :startDate %>
+      <%= f.text_field :startDate %>
+
+      <%= f.label :endDate %>
+      <%= f.text_field :endDate %>
+      
+
+      <%= f.label :status %>
+      <%= f.text_field :status %>
+
+</br>
+      <%= f.submit "Create new Week" %>
+    <% end %>
