closing ui 23jul branch.. home page ui done

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,3 +5,17 @@
 .metrouicss .control {
   color: rgb(58,30,30) !important;
 }
+
+.metrouicss .listview {
+  margin-top: 3px;
+}
+
+.metrouicss .tile {
+  margin-top: 2px !important;
+}
+
+.metrouicss .icon-small {
+  font-size: 27px;
+}
+
+
