--- a/app/views/weeks/index.html.erb
+++ b/app/views/weeks/index.html.erb
@@ -4,7 +4,7 @@
 <% if @weeks.empty? %>
  <p> No weeks found </p>
 <% else %> 
-<div class="carousel" style="height: 500px;" data-role="carousel"  data-param-direction="left" data-param-period="9999999999999" data-param-markers="on" >
+<div class="carousel" style="height: 500px;" data-role="carousel"  data-param-direction="right" data-param-period="9999999999999" data-param-markers="on" >
                                 <div class="slides">
 <% @weeks.each do |week| %>
                                     <div class="slide image" >
