--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,8 +31,20 @@
                                 <li><%= link_to "Help", help_path %></li>
 
                                 <li><%= link_to "Home", root_path %></li>
+                     <% if !signed_in? %>
+                                <li><%= link_to "Sign in", signin_path %></li>
+                     <%end%>
+                     <% if signed_in? %>
+
                                 <li><%= link_to "Users", users_path %></li>
                                 <li><%= link_to "Weeks", weeks_path %></li>
+                                <li>
+                                   <%= link_to signout_path, method: "delete" do %>
+                                   <i class="icon-off"></i> Sign out
+                                   <%end%>
+                                </li>
+
+                                <%end%>
                             </ul>
 
                         </div>
