--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,10 +12,22 @@
 
 .metrouicss .tile {
   margin-top: 2px !important;
+   a {
+      color: #ffffff;
+     }
 }
+
 
 .metrouicss .icon-small {
   font-size: 27px;
 }
 
 
+.clickableDiv span {
+width:100%;
+height:100%;
+position:absolute;
+z-index:2;
+top:0px;
+left:0px;
+ }
