--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,39 +1,61 @@
-<h1>Home</h1>
+<h1>Project Home</h1>
 
 
 <div class="carousel" style="height: 500px;" data-role="carousel"  data-param-direction="left" data-param-period="9999999999999" data-param-markers="on" >
                                 <div class="slides">
                                     <div class="slide image" >
+<!--  ============================Users slide=========================== -->
+
+<div class="tile double bg-color-green">
+                                    <div class="tile-content">
+                                        <h2>mattberg@live.com</h2>
+                                        <h5>Re: Wedding Annoucement!</h5>
+                                        <p>
+                                            Congratulations! I'm really excited to celebrate with you all. Thanks for...
+                                        </p>
+                                    </div>
+                                    <div class="brand">
+                                        <div class="badge">12</div>
+                                        <img class="icon" src="images/Mail128.png">
+                                    </div>
+                                </div>
 <% if @users.count == 0  %>
 <p> No users yet...</p>
 <% else %>
  <ul class="listview fluid">
 <% @users.each do |user| %>
-                                          <li class="bg-color-pinkDark fg-color-white">
+                                          <li class="bg-color-pinkDark fg-color-white  clickableDiv">
                                             <div class="icon">
-                                             <i class="icon-mail icon-small"></i>
+                                             <i class="icon-user icon-small"></i>
                                             </div>
                                             <div class="data">
-  <%= link_to user.name, user  %></br>
-  <%= user.email  %></br>
+  
+   <%= link_to content_tag(:span, ""), user, html_options = { style: "color: #ffffff;"} %> 
+   <%= user.name %> </br>
+   <%= user.email %>
+  
                                             </div>
                                           </li>
 <%end%>
  </ul>
 <%end%>
                      </div>
+					 
+<!--  ============================Weeks slide=========================== -->
                                     <div class="slide image" >
 <% if @users.count == 0  %>
 <p> No users yet...</p>
 <% else %>
  <ul class="listview fluid">
 <% @weeks.each do |week| %>
-                                          <li class="bg-color-pinkDark fg-color-white">
+                                          <li class="bg-color-pinkDark fg-color-white clickableDiv">
                                             <div class="icon">
-                                             <i class="icon-mail icon-small"></i>
+                                             <i class="icon-drawer icon-small"></i>
                                             </div>
                                             <div class="data">
-  <%= link_to week.name, week  %></br>
+  
+   <%= link_to content_tag(:span, ""), week, html_options = { style: "color: #ffffff;"} %>
+   <%= week.name %> </br>
   <%= week.status  %></br>
                                             </div>
                                           </li>
@@ -49,4 +71,5 @@
                                 <span class="control right">&#8250;</span>
                             </div>
                         </div>
+						
 
