tile listview left margin + home page h2 for users and weeks

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,14 +8,17 @@
 
 .metrouicss .listview {
   margin-top: 3px;
+  margin-left: 12px !important;
 }
 
 .metrouicss .tile {
   margin-top: 2px !important;
+  margin-left: 12px !important;
    a {
       color: #ffffff;
      }
 }
+
 
 
 .metrouicss .icon-small {
