--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,23 +6,26 @@
                                     <div class="slide image" >
 <!--  ============================Users slide=========================== -->
 
-<div class="tile double bg-color-green">
-                                    <div class="tile-content">
-                                        <h2>mattberg@live.com</h2>
-                                        <h5>Re: Wedding Annoucement!</h5>
-                                        <p>
-                                            Congratulations! I'm really excited to celebrate with you all. Thanks for...
-                                        </p>
-                                    </div>
-                                    <div class="brand">
-                                        <div class="badge">12</div>
-                                        <img class="icon" src="images/Mail128.png">
-                                    </div>
-                                </div>
+
+		
 <% if @users.count == 0  %>
 <p> No users yet...</p>
 <% else %>
  <ul class="listview fluid">
+ <li>
+                          
+
+                            <div class="icon">
+                                <i class="icon-user"></i>
+                            </div>
+
+                            <div class="data">
+                                <h2>All Users</h2>
+                                
+                            </div>
+                        </li>
+						
+						
 <% @users.each do |user| %>
                                           <li class="bg-color-pinkDark fg-color-white  clickableDiv">
                                             <div class="icon">
@@ -47,6 +50,18 @@
 <p> No users yet...</p>
 <% else %>
  <ul class="listview fluid">
+ <li>
+                          
+
+                            <div class="icon">
+                                <i class="icon-drawer"></i>
+                            </div>
+
+                            <div class="data">
+                                <h2>All Weeks</h2>
+                                
+                            </div>
+                        </li>
 <% @weeks.each do |week| %>
                                           <li class="bg-color-pinkDark fg-color-white clickableDiv">
                                             <div class="icon">
