--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,24 +1,43 @@
 <% provide(:title, 'All users') %>
-<h1>All users</h1>
+<h1></h1>
+
+
+<!--  ============================Users slide=========================== -->
+
+
 
 <% if @users.empty? %>
- <p> No users found </p>
-<% else %> 
-<div class="carousel" style="height: 500px;" data-role="carousel"  data-param-direction="left" data-param-period="9999999999999" data-param-markers="on" >
-                                <div class="slides">
+<p> No users yet...</p>
+<% else %>
+ <ul class="listview fluid">
+ <li>
+
+
+                            <div class="icon">
+                                <i class="icon-user"></i>
+                            </div>
+
+                            <div class="data">
+                                <h2>All Users</h2>
+
+                            </div>
+                        </li>
+
+
 <% @users.each do |user| %>
-                                    <div class="slide image" >
-    <div class="tile bg-color-orange"><%= user.name %></div>
-   <%= link_to user.name, user %>
-  <%= user.email  %>
-                                    </div>
+                                          <li class="bg-color-pinkDark fg-color-white  clickableDiv customDimensions">
+                                            <div class="icon">
+                                             <i class="icon-user icon-small"></i>
+                                            </div>
+                                            <div class="data">
 
+   <%= link_to content_tag(:span, ""), user, html_options = { style: "color: #ffffff;"} %>
+   <%= user.name %> </br>
+   <%= user.email %>
+
+                                            </div>
+                                          </li>
 <%end%>
-
-                                </div>
-                                <span class="control left">&#8249;</span>
-                                <span class="control right">&#8250;</span>
-                        </div>
-
+ </ul>
 <%end%>
 
