--- a/app/views/weeks/index.html.erb
+++ b/app/views/weeks/index.html.erb
@@ -1,24 +1,36 @@
 <% provide(:title, 'All weeks') %>
-<h1>All weeks</h1>
+<h1></h1>
 
+<!--  ============================Weeks slide=========================== -->
 <% if @weeks.empty? %>
- <p> No weeks found </p>
-<% else %> 
-<div class="carousel" style="height: 500px;" data-role="carousel"  data-param-direction="right" data-param-period="9999999999999" data-param-markers="on" >
-                                <div class="slides">
+<p> No weeks yet...</p>
+<% else %>
+ <ul class="listview fluid">
+ <li>
+
+
+                            <div class="icon">
+                                <i class="icon-drawer"></i>
+                            </div>
+
+                            <div class="data">
+                                <h2>All Weeks</h2>
+
+                            </div>
+                        </li>
 <% @weeks.each do |week| %>
-                                    <div class="slide image" >
-    <div class="tile bg-color-orange"></div>
-  <%= link_to week.name, week  %>
-  <%= week.startDate  %>
-  <%= week.endDate  %>
-                                    </div>
+                                          <li class="bg-color-pinkDark fg-color-white clickableDiv">
+                                            <div class="icon">
+                                             <i class="icon-drawer icon-small"></i>
+                                            </div>
+                                            <div class="data">
 
+   <%= link_to content_tag(:span, ""), week, html_options = { style: "color: #ffffff;"} %>
+   <%= week.name %> </br>
+  <%= week.status  %></br>
+                                            </div>
+                                          </li>
+<%end%>
+ </ul>
 <%end%>
 
-                                </div>
-                                <span class="control left">&#8249;</span>
-                                <span class="control right">&#8250;</span>
-                        </div>
-
-<%end%>
