--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,12 +5,21 @@
 
                             <span class="divider"></span>
                             <ul class="menu">
+                                <li><%= link_to "Home", root_path %></li>
+
+                     <% if signed_in? %>
+                                <li><%= link_to "Users", users_path %></li>
+                                <li><%= link_to "Weeks", weeks_path %></li>
+                     <%end%>
                                 <li data-role="dropdown">
-                                    <a>Teams</a>
+                                    <a>More</a>
                                     <ul class="dropdown-menu">
 
                                         <li><a href="#">PL QA</a></li>
 
+                                	<li><%= link_to "Pending", pending_path %></li>
+                                	<li><%= link_to "About", about_path %></li>
+                                	<li><%= link_to "Help", help_path %></li>
                                         <li><a href="#">SubItem 2</a></li>
 
                                         <li><a href="#">SubItem 3</a></li>
@@ -22,29 +31,16 @@
                                     </ul>
 
                                 </li>
-
-
-                                <li><a href="#">Update</a></li>
-
-                                <li><a href="#">My updates</a></li>
-                                <li><%= link_to "About", about_path %></li>
-                                <li><%= link_to "Help", help_path %></li>
-
-                                <li><%= link_to "Home", root_path %></li>
-                     <% if !signed_in? %>
-                                <li><%= link_to "Sign in", signin_path %></li>
-                     <%end%>
+                     	<% if !signed_in? %>
+                     	           <li><%= link_to "Sign in", signin_path %></li>
+                     	<%end%>
                      <% if signed_in? %>
-
-                                <li><%= link_to "Users", users_path %></li>
-                                <li><%= link_to "Weeks", weeks_path %></li>
                                 <li>
                                    <%= link_to signout_path, method: "delete" do %>
                                    <i class="icon-off"></i> Sign out
                                    <%end%>
                                 </li>
-
-                                <%end%>
+                     <%end%>
                             </ul>
 
                         </div>
