add jira ajax done

--- a/app/views/static_pages/pending.html.erb
+++ b/app/views/static_pages/pending.html.erb
@@ -7,7 +7,7 @@
 <button>Majoraccomp</button>
 <button></button>
 </div>
-<div class="tile bg-color-red"></br>Jiras - opened, closed, updated - changed status?</div>
+<div class="tile bg-color-red"></br>Jiras table</div>
 <div class="tile bg-color-red"></br>Major accomplishments</div>
 <div class="tile bg-color-red"></br>Items from last week</div>
 <div class="tile bg-color-red"></br>Plan for next week</div>
@@ -16,6 +16,9 @@
 <div class="tile bg-color-red"></br>Multiple projects</div>
 <div class="tile bg-color-red"></br>Multiple projects on home page</div>
 <div class="tile bg-color-red"></br>week creation: use calender, name to be derived</div>
+<div class="tile bg-color-red"></br>When the user is created, add him to the latest week</div>
+<div class="tile bg-color-red"></br>When a new week is created, close the previous week and make this new one open</div>
+<div class="tile bg-color-red"></br>Just keep the latest week open</div>
     <div class="tile double">hello
                                 <button><i class="icon-home"></i></button>
 				<%= button_to "Help", help_path, class: "shortcut" %>
