--- a/app/views/static_pages/pending.html.erb
+++ b/app/views/static_pages/pending.html.erb
@@ -8,6 +8,7 @@
 <button></button>
 </div>
 <div class="tile bg-color-red"></br>Jiras table</div>
+<div class="tile bg-color-red"></br>Jiras should be Unique</div>
 <div class="tile bg-color-red"></br>Major accomplishments</div>
 <div class="tile bg-color-red"></br>Items from last week</div>
 <div class="tile bg-color-red"></br>Plan for next week</div>
